# PREN2025_T3

./: .cproject  .default_mex  .editorconfig  .gitignore  .project  CMakeLists.txt  CMakePresets.json  PREN_Puzzleroboter.mex  PREN_Puzzleroboter_Debug.ld  README.md  Ueb12_Timer_IC_LineSensor JLink Debug.launch  Ueb12_Timer_IC_LineSensor_Loesung JLink Debug.launch  bugfix.md  flags.cmake  flowchart.md  mcux_include.json
Debug/: HALLO.map  HALLO_Debug.ld  HALLO_Debug_library.ld  HALLO_Debug_memory.ld  PREN_Puzzleroboter.axf  PREN_Puzzleroboter.map  Ueb12_Timer_IC_LineSensor_Loesung_Debug.ld  Ueb12_Timer_IC_LineSensor_Loesung_Debug_library.ld  Ueb12_Timer_IC_LineSensor_Loesung_Debug_memory.ld  makefile  sources.mk
Debug/board/: clock_config.d  clock_config.su  subdir.mk
Debug/device/: subdir.mk  system_MK22F51212.d
Debug/drivers/: fsl_adc16.d  fsl_clock.d  fsl_common.d  fsl_common_arm.d  fsl_dspi.d  fsl_dspi.su  fsl_gpio.d  fsl_i2c.d  fsl_i2c.su  fsl_rtc.d  fsl_smc.d  fsl_uart.d  fsl_uart.su  subdir.mk
Debug/source/: main.d  main.su  subdir.mk
Debug/source/com/: subdir.mk  uart0.d  uart0.su  uart1.d  uart1.su
Debug/source/io/: led.d  led.su  subdir.mk
Debug/source/utils/: ftm0.d  ftm0.su  ftm3.d  ftm3.su  subdir.mk  util.d
Debug/startup/: subdir.mk  system.d
board/: clock_config.c  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h
docs/: IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_GUIDE_reworked.md
linker/: PREN_Puzzleroboter_Debug.ld  PREN_Puzzleroboter_Debug_library.ld  PREN_Puzzleroboter_Debug_memory.ld
source/: main.c  platform.h
source/SEGGER/SYSVIEW/Config/: SEGGER_SYSVIEW_Conf.h
source/TMC2209/: tmc2209.c  tmc2209.h
source/app/: bot_engine.c  bot_engine.h  calibration.h  console_goto.c  console_goto.h  debug.c  debug.h  demo_draw.c  demo_draw.h  init.c  init.h  magnet_check.c  magnet_check.h  poll.c  poll.h
source/com/: uart.h  uart0.c  uart1.c
source/config/: build_config.h  calibration.c  calibration.h  calibration_config.h  communication_config.h  encoder_config.h  geometry_config.h  hardware_config.h  home_config.h  init.c  init.h  magnet_config.h  motion_config.h  pick_config.h  place_config.h  robot_config.h  tmc2209_config.h
source/controls/: bot.c  bot.h  job.c  job.h  magnet.c  magnet.h  protocol.h  state.h
source/debug_tools/: debug.c  debug.h  test_tools.c  test_tools.h
source/debug_tools/calibration/: calibration.c
source/debug_tools/console_sim/: console_uart_sim.c
source/debug_tools/demo_draw/: demo_draw.c  demo_draw.h
source/debug_tools/position_debug/: position_debug.c  position_debug.h
source/debug_tools/tmc2209_uart_test/: tmc2209_uart_test.c  tmc2209_uart_test.h
source/io/: io.c  io.h  led.c  led.h  magnet.c  magnet.h
source/job/: job.c  job.h  job_home.c  job_home.h  job_motion_finish.c  job_motion_finish.h  job_move.c  job_move.h  job_pick.c  job_pick.h  job_place.c  job_place.h
source/motion/: limit_switch.c  limit_switch.h  motion.c  motion.h  motion_tuning.c  motion_tuning.h  stepper.c  stepper.h
source/position/: position.c  position.h
source/proto/: cmd.c  cmd.h  console_uart_sim.c  console_uart_sim.h  proto_io.c  proto_io.h  protocol.c  protocol.h  serial_port.h  serial_port_tinyk22.c
source/test_tools/: calibration.c  debug.c  test_tools.c
source/utils/: ftm0.c  ftm0.h  ftm3.c  ftm3.h  parse_kv.c  parse_kv.h  util.h
